--- a/src/styles/work-preview.css
+++ b/src/styles/work-preview.css
@@ -80,6 +80,11 @@
   .work-chip {
     padding: 4px;
   }
+
+  .work-info-container {
+    gap: 8px;
+    padding: 8px 0;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
